# TCP-UDP-Socket

Cpp_Socket/: CMakeLists.txt
Cpp_Socket/src/TCP/: Client.cpp  Client.h  Server.cpp  Server.h
Cpp_Socket/src/UDP/: Client.cpp  Client.h  Server.cpp  Server.h
Cpp_Socket/src/main/TCP/: client.cpp  server.cpp
Cpp_Socket/src/main/UDP/: client.cpp  server.cpp
Cpp_Socket/src/utils/: Arguments.cpp  Error.cpp  IpResolver.cpp
Java_Socket/src/TCP/java/main/: StartClient.java  StartServer.java
Java_Socket/src/TCP/java/socket/: Client.java  Server.java
Java_Socket/src/UDP/java/: functions.java
Java_Socket/src/UDP/java/main/: StartClient.java  StartServer.java
Java_Socket/src/UDP/java/socket/: Client.java  Server.java
